# fastapi-project

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
core/: settings.py
database/: db.py
migrations/: env.py
migrations/versions/: 9c32362e618c_init.py  d6ff02bc1526_change_user_table.py
model/: base_model.py  enums.py  models.py
repository/: base_repository.py  pet.py  user.py
routers/: auth.py  pet.py  user.py
schemas/: pet.py  user.py
service/: auth.py  dependencies.py  pet.py  user.py
utils/: auth.py  hash_password.py
