[tool.poetry]
name = "fastapi_pet-project"
version = "0.1.0"
description = ""
authors = ["Mizhik <vlad.mezhinskiy07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
fastapi = "^0.115.5"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
