[tool.poetry]
name = "fastapi_pet-project"
version = "0.1.0"
description = ""
authors = ["Mizhik <vlad.mezhinskiy07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
fastapi = "^0.115.5"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.10.0"}
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
